Replace deprecated URL constructor
See https://inside.java/2023/02/15/quality-heads-up/

Change-Id: I30fb4ff50c73c880045bb9b631d51c22109e3c46